--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-description: "你来到了没有知识的荒原 🙊"
-header-img: "img/404-bg.jpg"
+description: "Hey, welcome to the black hole! 🙊"
+header-img: "grasscaograss.github.io/outer_space_galaxies_black_hole.jpg"
 permalink: /404.html
 ---
 
