--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 description: "Hey, welcome to the black hole! 🙊"
-header-img: "grasscaograss.github.io/outer_space_galaxies_black_hole.jpg"
+header-img: "img/404page.jpg"
 permalink: /404.html
 ---
 
