--- a/tags.html
+++ b/tags.html
@@ -2,7 +2,7 @@
 title: Tags
 layout: default
 description: Stay hungry, stay foolish!
-header-img: "img/post-bg-rwd.jpg"
+header-img: "img/post-bg-map.jpg"
 ---
 
 <!-- Page Header -->
